// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimelineEntry > handles missing optional fields gracefully 1`] = `
<div>
  <li
    aria-label="at 3/26/2024, 10:00:00 AM"
    class="flex items-start gap-3 p-3 border-b border-gray-100 last:border-b-0 hover:bg-gray-50 transition-colors"
  >
    <div
      class="flex items-center gap-2 flex-shrink-0"
    />
    <div
      class="flex-1 min-w-0"
    >
      <p
        class="text-sm text-gray-600 mb-2"
      >
        Basic entry
      </p>
    </div>
    <div
      class="flex-shrink-0 text-right"
    >
      <time
        class="text-sm text-gray-500 hover:text-gray-700 cursor-help"
        datetime="2024-03-26T10:00:00Z"
        title="3/26/2024, 10:00:00 AM"
      >
        365 days ago
      </time>
    </div>
  </li>
</div>
`;

exports[`TimelineEntry > renders SDK-driven entry with transaction link 1`] = `
<div>
  <li
    aria-label="Status changed from ESCROW CREATED to ESCROW FUNDED by John Doe (adopter) Reason: Funds deposited successfully at 3/26/2024, 10:00:00 AM"
    class="flex items-start gap-3 p-3 border-b border-gray-100 last:border-b-0 hover:bg-gray-50 transition-colors"
  >
    <div
      class="flex items-center gap-2 flex-shrink-0"
    >
      <div
        class="group relative inline-flex"
      >
        <span
          class="status-badge status-badge--gray"
        >
          <span>
            Escrow Created
          </span>
        </span>
        <div
          class="status-badge__tooltip-wrapper"
        >
          <div
            class="status-badge__tooltip"
          >
            Escrow has been created but not funded yet.
          </div>
        </div>
      </div>
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right h-4 w-4 text-gray-400 flex-shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
      <div
        class="group relative inline-flex"
      >
        <span
          class="status-badge status-badge--teal"
        >
          <span>
            Escrow Funded
          </span>
        </span>
        <div
          class="status-badge__tooltip-wrapper"
        >
          <div
            class="status-badge__tooltip"
          >
            Funds have been deposited into escrow.
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <span
          class="font-medium text-gray-900"
        >
          John Doe
        </span>
        <span
          class="text-sm text-gray-500"
        >
          (
          adopter
          )
        </span>
      </div>
      <p
        class="text-sm text-gray-600 mb-2"
      >
        Escrow created
      </p>
      <p
        class="text-sm text-gray-600 mb-2"
      >
        Funds deposited successfully
      </p>
      <div
        class="mb-2"
      >
        <a
          aria-label="View transaction on Stellar explorer"
          class="inline-flex items-center gap-1 text-sm font-semibold text-blue-600 hover:text-blue-700 hover:underline "
          data-testid="stellar-tx-link"
          href="https://stellar.expert/explorer/public/tx/abcd1234567890abcd1234567890abcd12345678"
          rel="noopener noreferrer"
          target="_blank"
        >
          abcd1234…12345678
          <svg
            aria-hidden="true"
            class="lucide lucide-external-link w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 3h6v6"
            />
            <path
              d="M10 14 21 3"
            />
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      class="flex-shrink-0 text-right"
    >
      <time
        class="text-sm text-gray-500 hover:text-gray-700 cursor-help"
        datetime="2024-03-26T10:00:00Z"
        title="3/26/2024, 10:00:00 AM"
      >
        365 days ago
      </time>
    </div>
  </li>
</div>
`;

exports[`TimelineEntry > renders admin override entry correctly 1`] = `
<div>
  <li
    aria-label="Status changed from ESCROW FUNDED to FUNDS RELEASED by Admin User (administrator) Reason: Manual release due to completed custody Admin override at 3/26/2024, 10:00:00 AM"
    class="flex items-start gap-3 p-3 border-b border-gray-100 last:border-b-0 hover:bg-gray-50 transition-colors"
  >
    <div
      class="flex items-center gap-2 flex-shrink-0"
    >
      <div
        class="group relative inline-flex"
      >
        <span
          class="status-badge status-badge--teal"
        >
          <span>
            Escrow Funded
          </span>
        </span>
        <div
          class="status-badge__tooltip-wrapper"
        >
          <div
            class="status-badge__tooltip"
          >
            Funds have been deposited into escrow.
          </div>
        </div>
      </div>
      <svg
        aria-hidden="true"
        class="lucide lucide-arrow-right h-4 w-4 text-gray-400 flex-shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="m12 5 7 7-7 7"
        />
      </svg>
      <div
        class="group relative inline-flex"
      >
        <span
          class="status-badge status-badge--green"
        >
          <span>
            Funds Released
          </span>
        </span>
        <div
          class="status-badge__tooltip-wrapper"
        >
          <div
            class="status-badge__tooltip"
          >
            Funds have been released successfully.
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <span
          class="font-medium text-gray-900"
        >
          Admin User
        </span>
        <span
          class="text-sm text-gray-500"
        >
          (
          administrator
          )
        </span>
      </div>
      <p
        class="text-sm text-gray-600 mb-2"
      >
        Escrow created
      </p>
      <p
        class="text-sm text-gray-600 mb-2"
      >
        Manual release due to completed custody
      </p>
      <div
        class="mb-2"
      >
        <span
          class="inline-flex items-center px-2 py-1 text-xs font-medium rounded-full bg-amber-100 text-amber-800"
        >
          Admin override
        </span>
      </div>
    </div>
    <div
      class="flex-shrink-0 text-right"
    >
      <time
        class="text-sm text-gray-500 hover:text-gray-700 cursor-help"
        datetime="2024-03-26T10:00:00Z"
        title="3/26/2024, 10:00:00 AM"
      >
        365 days ago
      </time>
    </div>
  </li>
</div>
`;

exports[`TimelineEntry > renders regular entry correctly 1`] = `
<div>
  <li
    aria-label="by John Doe (adopter) Reason: Initial escrow setup at 3/26/2024, 10:00:00 AM"
    class="flex items-start gap-3 p-3 border-b border-gray-100 last:border-b-0 hover:bg-gray-50 transition-colors"
  >
    <div
      class="flex items-center gap-2 flex-shrink-0"
    >
      <div
        class="group relative inline-flex"
      >
        <span
          class="status-badge status-badge--gray"
        >
          <span>
            Escrow Created
          </span>
        </span>
        <div
          class="status-badge__tooltip-wrapper"
        >
          <div
            class="status-badge__tooltip"
          >
            Escrow has been created but not funded yet.
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <span
          class="font-medium text-gray-900"
        >
          John Doe
        </span>
        <span
          class="text-sm text-gray-500"
        >
          (
          adopter
          )
        </span>
      </div>
      <p
        class="text-sm text-gray-600 mb-2"
      >
        Escrow created
      </p>
      <p
        class="text-sm text-gray-600 mb-2"
      >
        Initial escrow setup
      </p>
    </div>
    <div
      class="flex-shrink-0 text-right"
    >
      <time
        class="text-sm text-gray-500 hover:text-gray-700 cursor-help"
        datetime="2024-03-26T10:00:00Z"
        title="3/26/2024, 10:00:00 AM"
      >
        365 days ago
      </time>
    </div>
  </li>
</div>
`;
